--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="MS-content">
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -21,7 +21,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -31,7 +31,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -41,7 +41,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil4.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -51,7 +51,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil5.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -61,7 +61,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil6.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -71,7 +71,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -81,7 +81,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -91,7 +91,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -101,7 +101,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil4.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -111,7 +111,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil5.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -121,7 +121,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil6.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -131,7 +131,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -141,7 +141,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
@@ -151,7 +151,7 @@
         </div>
         <div class="item">
             <div class="img-perfil">
-                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+                <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
                 <p class="textname">Nome: Jose</p>
