Mais uma atualização de última hora

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,8 +24,8 @@
                 <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Maria</p>
+                <p class="textage">Idade: 85</p>
             </div>
 
         </div>
@@ -34,8 +34,8 @@
                 <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Mauro</p>
+                <p class="textage">Idade: 12</p>
             </div>
 
         </div>
@@ -44,8 +44,8 @@
                 <img src="~/Images/perfil4.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Ana</p>
+                <p class="textage">Idade: 56</p>
             </div>
 
         </div>
@@ -54,8 +54,8 @@
                 <img src="~/Images/perfil5.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Robson</p>
+                <p class="textage">Idade: 65</p>
             </div>
 
         </div>
@@ -64,8 +64,8 @@
                 <img src="~/Images/perfil6.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Julia</p>
+                <p class="textage">Idade: 25</p>
             </div>
 
         </div>
