--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -74,8 +74,8 @@
                 <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Carlos</p>
+                <p class="textage">Idade: 74</p>
             </div>
 
         </div>
@@ -84,8 +84,8 @@
                 <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Josefina</p>
+                <p class="textage">Idade: 62</p>
             </div>
 
         </div>
@@ -94,8 +94,8 @@
                 <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Gonçalves</p>
+                <p class="textage">Idade: 45</p>
             </div>
 
         </div>
@@ -104,7 +104,7 @@
                 <img src="~/Images/perfil4.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
+                <p class="textname">Nome: Cleide</p>
                 <p class="textage">Idade: 38</p>
             </div>
 
@@ -114,8 +114,8 @@
                 <img src="~/Images/perfil5.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Roberto</p>
+                <p class="textage">Idade: 36</p>
             </div>
 
         </div>
@@ -124,8 +124,8 @@
                 <img src="~/Images/perfil6.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Elisa</p>
+                <p class="textage">Idade: 21</p>
             </div>
 
         </div>
@@ -134,8 +134,8 @@
                 <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Enzo</p>
+                <p class="textage">Idade: 5</p>
             </div>
 
         </div>
@@ -144,7 +144,7 @@
                 <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
+                <p class="textname">Nome: Carla</p>
                 <p class="textage">Idade: 38</p>
             </div>
 
@@ -154,8 +154,8 @@
                 <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
             </div>
             <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
+                <p class="textname">Nome: Tiago</p>
+                <p class="textage">Idade: 41</p>
             </div>
 
         </div>
