--- a/Content/Perfil.css
+++ b/Content/Perfil.css
@@ -37,7 +37,7 @@
     grid-template-columns: auto auto;
     grid-gap: 32px;
 
-    margin-top: 22px;
+    margin-top: 10px;
 }
 
 .profile-data {
@@ -49,4 +49,8 @@
 
 .text-bold {
     font-weight: 700;
+}
+
+.profile-title {
+    margin-top: 12px;
 }
