--- a/Views/Responsavels/UploadFotoPerfil.cshtml
+++ b/Views/Responsavels/UploadFotoPerfil.cshtml
@@ -5,17 +5,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>UploadFotoPerfil</h2>
-
 
 @using (Html.BeginForm("UploadFotoPerfil", "Responsavels", FormMethod.Post,
 new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>UploadFotoPerfil</h4>
-        <hr />
+    <div class="img-banner-container">
+        <img src="~/Images/BANNER SITE.jpg" alt="banner" class="img-banner" />
+    </div>
+    <div class="form-horizontal" style="margin-top: 22px;">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -27,15 +25,11 @@ new { enctype = "multipart/form-data" }))
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
