Editar perfil do responsavel Ainda nao acabado

--- a/Views/Responsavels/Perfil.cshtml
+++ b/Views/Responsavels/Perfil.cshtml
@@ -49,5 +49,5 @@
     </div>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+    @Html.ActionLink("Edit", "EditarPerfil", new { id = Model.Id })
 </p>
