--- a/Views/Desaparecido/InitialRegisterDesaparecido.cshtml
+++ b/Views/Desaparecido/InitialRegisterDesaparecido.cshtml
@@ -9,17 +9,18 @@
 {
     @Html.AntiForgeryToken()
 
-        <h1 class="title">Cadastro de desaparecido</h1>
+    <h1 class="title">Cadastro de desaparecido</h1>
+    <p class="subtitle"></p>
     <div class="form-horizontal">
         <div class="form-container">
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nome" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger mensagem-erro" })
             </div>
 
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control", @placeholder = "Sobrenome" } })
-                @Html.ValidationMessageFor(model => model.Sobrenome, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Sobrenome, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
         <div class="form-container">
@@ -46,12 +47,12 @@
         <div class="form-container">
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.CorOlhos, new { htmlAttributes = new { @class = "form-control", @placeholder = "Cor dos Olhos" } })
-                @Html.ValidationMessageFor(model => model.CorOlhos, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CorOlhos, "", new { @class = "text-danger mensagem-erro" })
             </div>
 
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.CorCabelo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Cor dos Cabelos" } })
-                @Html.ValidationMessageFor(model => model.CorCabelo, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CorCabelo, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
@@ -72,25 +73,25 @@
             </div>
 
             <div class="form-group form-Box">
-                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control", @placeholder = "Data de nascimento" } })
-                @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.DataNascimento, "{0:MM/dd/yyyy}", htmlAttributes: new { @class = "form-control", @type = "date" })
+                @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
         <div class="form-container">
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.Altura, new { htmlAttributes = new { @class = "form-control", @placeholder = "Altura" } })
-                @Html.ValidationMessageFor(model => model.Altura, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Altura, "", new { @class = "text-danger mensagem-erro" })
             </div>
 
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.Peso, new { htmlAttributes = new { @class = "form-control", @placeholder = "Peso" } })
-                @Html.ValidationMessageFor(model => model.Peso, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Peso, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
         <div class="form-group form-Box2">
             @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", @placeholder = "Adicione uma breve descrição sobre a pessoa" } })
-            @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger mensagem-erro" })
         </div>
 
         <div class="form-container">
@@ -100,7 +101,7 @@
             </div>
 
             <div class="button-Container">
-                <input type="submit" value="Continuar cadastro" />
+                <input type="submit" value="Continuar cadastro"  />
             </div>
         </div>
     </div>
@@ -111,10 +112,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
 
     <script>
-        $(function () {
-            $("#DataNascimento").mask("99/99/9999");
-
-        });
 
     </script>
 
