--- a/Views/Desaparecido/FinalRegisterDesaparecido.cshtml
+++ b/Views/Desaparecido/FinalRegisterDesaparecido.cshtml
@@ -34,7 +34,7 @@
                 </div>
                 <div class="form-group form-Box4">
                     @Html.EditorFor(model => model.deficienciaMentalText, new { htmlAttributes = new { @class = "form-control newform-control", @placeholder = "Descrição", @Disabled = true } })
-                    @Html.ValidationMessageFor(model => model.deficienciaMentalText, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.deficienciaMentalText, "", new { @class = "text-danger mensagem-erro" })
                 </div>
             </div>
 
@@ -62,7 +62,7 @@
                 </div>
                 <div class="form-group form-Box4">
                     @Html.EditorFor(model => model.deficienciaFisicaText, new { htmlAttributes = new { @class = "form-control newform-control", @placeholder = "Descrição", @Disabled = true } })
-                    @Html.ValidationMessageFor(model => model.deficienciaFisicaText, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.deficienciaFisicaText, "", new { @class = "text-danger mensagem-erro" })
                 </div>
             </div>
 
@@ -90,7 +90,7 @@
                 </div>
                 <div class="form-group form-Box4">
                     @Html.EditorFor(model => model.restricaoAlimentarText, new { htmlAttributes = new { @class = "form-control newform-control", @placeholder = "Descrição", @Disabled = true } })
-                    @Html.ValidationMessageFor(model => model.restricaoAlimentarText, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.restricaoAlimentarText, "", new { @class = "text-danger mensagem-erro" })
                 </div>
             </div>
 
@@ -118,7 +118,7 @@
                 </div>
                 <div class="form-group form-Box4">
                     @Html.EditorFor(model => model.doencaText, new { htmlAttributes = new { @class = "form-control newform-control", @placeholder = "Descrição", @Disabled = true } })
-                    @Html.ValidationMessageFor(model => model.doencaText, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.doencaText, "", new { @class = "text-danger mensagem-erro" })
                 </div>
             </div>
 
