--- a/Views/Responsavels/TerminarRegistro.cshtml
+++ b/Views/Responsavels/TerminarRegistro.cshtml
@@ -54,37 +54,11 @@
             </div>
 
             <div class="form-group form-Box">
-                <select asp-for="Sexo" class="form-control select2">
-                    <option value="" hidden selected disabled>UF</option>
-                    <option value="AC">AC</option>
-                    <option value="AL">AL</option>
-                    <option value="AP">AP</option>
-                    <option value="AM">AM</option>
-                    <option value="BA">BA</option>
-                    <option value="CE">CE</option>
-                    <option value="DF">DF</option>
-                    <option value="ES">ES</option>
-                    <option value="GO">GO</option>
-                    <option value="MA">MA</option>
-                    <option value="MT">MT</option>
-                    <option value="MS">MS</option>
-                    <option value="MG">MG</option>
-                    <option value="PA">PA</option>
-                    <option value="PB">PB</option>
-                    <option value="PR">PR</option>
-                    <option value="PE">PE</option>
-                    <option value="PI">PI</option>
-                    <option value="RJ">RJ</option>
-                    <option value="RN">RN</option>
-                    <option value="RS">RS</option>
-                    <option value="RO">RO</option>
-                    <option value="RR">RR</option>
-                    <option value="SC">SC</option>
-                    <option value="SP">SP</option>
-                    <option value="SE">SE</option>
-                    <option value="TO">TO</option>
-
-                </select>
+             @Html.EnumDropDownListFor(
+                x => x.UF,
+                "UF",   
+                new { @class = "form-control select2"})
+            @Html.ValidationMessageFor(model => model.UF, "", new { @class = "text-danger" })
             </div>
         </div>
 
