Validando se profissional tem cadastro concluido antes de cadastrar um novo desaparecido

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                         <div class="menuContainer">
                             <div class="menulink"><p class="link">Pessoas Encontradas</p></div>
                             <div class="menulink"><p class="link">Meus Desaparecidos</p></div>
+                            <div class="menulink"><a href="~/Desaparecido/InitialRegisterDesaparecido" class="link">Cadastrar Desaparecidos</a></div>
                             <div class="menulink"><p class="link">Meus Vulneráveis</p></div>
                             <div class="menulink"><p class="link">Estatísticas</p></div>
                         </div>
