--- a/Views/Desaparecido/ConfirmationRegisterDesaparecido.cshtml
+++ b/Views/Desaparecido/ConfirmationRegisterDesaparecido.cshtml
@@ -3,9 +3,11 @@
 @{
     ViewBag.Title = "ConfirmationRegisterDesaparecido";
     Layout = "~/Views/Shared/_Register.cshtml";
+
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(x => x.codigo)
     @Html.AntiForgeryToken()
 
     <h1 class="title">Estamos quase acabando...</h1>
@@ -13,7 +15,7 @@
     <div class="form-horizontal">
 
         <div class="form-group form-Box2">
-            @Html.EditorFor(model => model.SeuCPF, new { htmlAttributes = new { @class = "form-control", @placeholder = "Seu CPF" } })
+            @Html.EditorFor(model => model.SeuCPF, new { htmlAttributes = new { @class = "form-control", @placeholder = "Seu CPF", @value = "TEST" } })
             @Html.ValidationMessageFor(model => model.SeuCPF, "", new { @class = "text-danger mensagem-erro" })
         </div>
 
@@ -39,12 +41,12 @@
                 @Html.ValidationMessageFor(model => model.RgDesaparecido, "", new { @class = "text-danger mensagem-erro" })
             </div>
             <div class="form-group form-Box">
-                @Html.TextBoxFor(model => model.DataBO,  htmlAttributes: new { @class = "form-control", @type = "date", @placeholder = "Data do boletim" })
+                @Html.TextBoxFor(model => model.DataBO, htmlAttributes: new { @class = "form-control", @type = "date", @placeholder = "Data do boletim" })
                 @Html.ValidationMessageFor(model => model.DataBO, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
-       
+
 
         <div class="form-container">
             <div class="button-Container">
