--- a/Views/Desaparecido/FinalRegisterDesaparecido.cshtml
+++ b/Views/Desaparecido/FinalRegisterDesaparecido.cshtml
@@ -7,6 +7,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(x => x.codigo)
     @Html.AntiForgeryToken()
 
     <h1 class="title">Cadastro de desaparecido</h1>
@@ -21,14 +22,14 @@
                            name="deficienciaMentalRadio"
                            type="radio"
                            value="yes"
-                           onclick="showDescriptionMental()"/>
+                           onclick="showDescriptionMental()" />
                     <p>Sim</p>
                     <input checked="checked"
                            id="deficienciaMentalRadio"
                            name="deficienciaMentalRadio"
                            type="radio"
                            value="no"
-                           onclick="hideDescriptionMental()"/>
+                           onclick="hideDescriptionMental()" />
                     <p>Não</p>
 
                 </div>
@@ -49,14 +50,14 @@
                            name="deficienciaFisicaRadio"
                            type="radio"
                            value="yes"
-                           onclick="showDescriptionFisic()"/>
+                           onclick="showDescriptionFisic()" />
                     <p>Sim</p>
                     <input checked="checked"
                            id="deficienciaFisicaRadio"
                            name="deficienciaFisicaRadio"
                            type="radio"
                            value="no"
-                           onclick="hideDescriptionFisic()"/>
+                           onclick="hideDescriptionFisic()" />
                     <p>Não</p>
 
                 </div>
@@ -77,20 +78,48 @@
                            name="restricaoAlimentarRadio"
                            type="radio"
                            value="yes"
-                           onclick="showDescriptionAlimentar()"/>
+                           onclick="showDescriptionAlimentar()" />
                     <p>Sim</p>
                     <input checked="checked"
                            id="restricaoAlimentarRadio"
                            name="restricaoAlimentarRadio"
                            type="radio"
                            value="no"
-                           onclick="hideDescriptionAlimentar()"/>
+                           onclick="hideDescriptionAlimentar()" />
                     <p>Não</p>
 
                 </div>
                 <div class="form-group form-Box4">
                     @Html.EditorFor(model => model.restricaoAlimentarText, new { htmlAttributes = new { @class = "form-control newform-control", @placeholder = "Descrição", @Disabled = true } })
                     @Html.ValidationMessageFor(model => model.restricaoAlimentarText, "", new { @class = "text-danger mensagem-erro" })
+                </div>
+            </div>
+
+        </div>
+
+        <div class="form-container2">
+            <p>Tem algum tipo de restriçao a Medicamentos? Caso sim descreva:</p>
+            <div class="form-container">
+                <div class="form-group form-Box3">
+
+                    <input id="restricaoMedicamentosRadio"
+                           name="restricaoMedicamentosRadio"
+                           type="radio"
+                           value="yes"
+                           onclick="showDescriptionMedicamentos()" />
+                    <p>Sim</p>
+                    <input checked="checked"
+                           id="restricaoMedicamentosRadio"
+                           name="restricaoMedicamentosRadio"
+                           type="radio"
+                           value="no"
+                           onclick="hideDescriptionMedicamentos()" />
+                    <p>Não</p>
+
+                </div>
+                <div class="form-group form-Box4">
+                    @Html.EditorFor(model => model.restricaoMedicamentosText, new { htmlAttributes = new { @class = "form-control newform-control", @placeholder = "Descrição", @Disabled = true } })
+                    @Html.ValidationMessageFor(model => model.restricaoMedicamentosText, "", new { @class = "text-danger mensagem-erro" })
                 </div>
             </div>
 
@@ -105,14 +134,14 @@
                            name="doencaRadio"
                            type="radio"
                            value="yes"
-                           onclick="showDescriptionDoenca()"/>
+                           onclick="showDescriptionDoenca()" />
                     <p>Sim</p>
                     <input checked="checked"
                            id="doencaRadio"
                            name="doencaRadio"
                            type="radio"
                            value="no"
-                           onclick="hideDescriptionDoenca()"/>
+                           onclick="hideDescriptionDoenca()" />
                     <p>Não</p>
 
                 </div>
@@ -191,6 +220,18 @@
         function hideDescriptionDoenca() {
             if (document.getElementById('doencaText').disabled == false) {
                 document.getElementById('doencaText').disabled = true
+            }
+        }
+
+        function showDescriptionMedicamentos() {
+            if (document.getElementById('restricaoMedicamentosText').disabled == true) {
+                document.getElementById('restricaoMedicamentosText').disabled = false
+            }
+        }
+
+        function hideDescriptionMedicamentos() {
+            if (document.getElementById('restricaoMedicamentosText').disabled == false) {
+                document.getElementById('restricaoMedicamentosText').disabled = true
             }
         }
 
