--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link href="~/Content/Exibicao.css" rel="stylesheet" />
+<link href="~/Content/Listagem.css" rel="stylesheet" />
 
 <div class="img-banner-container">
     <img src="~/Images/BANNER SITE.jpg" alt="banner" class="img-banner" />
