Exibir um desaparecido

--- a/Views/Desaparecido/ListDesaparecidoTest.cshtml
+++ b/Views/Desaparecido/ListDesaparecidoTest.cshtml
@@ -37,7 +37,7 @@
                 <p class="list-subtitle">Desaparecido desde:</p>
                 <p class="list-date">@Html.DisplayFor(model => item.Cadastro)</p>
 
-                <a href="https://localhost:44390/Desaparecido/ListOneDesaparecido/`${item.id}`" class="list-button">Mais Informações</a>
+                <a href="https://localhost:44390/Desaparecido/ListOneDesaparecido/@item.Id" class="list-button">Mais Informações</a>
             </div>
         }
 
