--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -1,10 +1,10 @@
-﻿
+﻿@model Dory2.Models.Tutorias
 @{
     ViewBag.Title = "ListOneDesaparecido";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link href="~/Content/Listagem.css" rel="stylesheet" />
+<link href="~/Content/Exibicao.css" rel="stylesheet" />
 
 <div class="img-banner-container">
     <img src="~/Images/BANNER SITE.jpg" alt="banner" class="img-banner" />
@@ -13,35 +13,41 @@
 
 <div class="card">
     <div class="card-header">
-        <img  src="~/Images/perfil.jpg" alt="temp" />
+        <img src="~/Images/@ViewBag.FotoPerfil" alt="temp" />
         <div>
-            <p class="card-name">Nome Sobrenome</p>
-            <p class="card-age">00 anos</p>
+            <p class="card-name">@Html.DisplayFor(x => x.Pessoa.Nome)</p>
+            <p class="card-age">
+                @ViewBag.Idade
+                anos
+            </p>
         </div>
     </div>
     <div class="card-body">
         <div class="bodycontent">
             <p class="body-title">Desaparecido desde</p>
-            <p>25/06/2012</p>
+            <p>@Html.DisplayFor(x => x.Cadastro)</p>
 
             <p class="body-title">Contato</p>
-            <p>(12) 9 9999-9999</p>
+            <p>@Html.DisplayFor(x => x.Responsavel.Celular)</p>
 
             <p class="body-title">Sexo</p>
-            <p>Masculino</p>
+            <p>@Html.DisplayFor(x => x.Pessoa.Sexo)</p>
         </div>
         <div class="bodycontent">
             <p class="body-title">Deficiência mental</p>
-            <p>Não Possui</p>
+            <p>@ViewBag.Mental</p>
 
             <p class="body-title">Deficiência Física</p>
-            <p>(12) 9 9999-9999</p>
+            <p>@ViewBag.Fisico</p>
 
             <p class="body-title">Medicamentos alergenicos</p>
-            <p>Ibuprofeno</p>
+            <p>@ViewBag.Medicamentos</p>
 
             <p class="body-title">Comidas alergenicas</p>
-            <p>Amendoin Lactose</p>
+            <p>@ViewBag.Comidas</p>
+
+            <p class="body-title">Outras condições</p>
+            <p>@ViewBag.Doencas</p>
         </div>
     </div>
     <div class="card-footer">
