--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     {
                         <div class="menuContainer">
                             <div class="menulink"><p class="link">Pessoas Encontradas</p></div>
-                            <div class="menulink"><p class="link">Meus Desaparecidos</p></div>
+                            <div class="menulink"><a href="~/Desaparecido/ListMeusDesaparecidos" class="link">Meus Desaparecidos</a></div>
                             <div class="menulink"><a href="~/Desaparecido/InitialRegisterDesaparecido" class="link">Cadastrar Desaparecidos</a></div>
                             <div class="menulink"><p class="link">Meus Vulneráveis</p></div>
                             <div class="menulink"><p class="link">Estatísticas</p></div>
